--- a/Week 02/SLU04 - Data Structures/Exercise notebook.ipynb
+++ b/Week 02/SLU04 - Data Structures/Exercise notebook.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -174,12 +174,12 @@
    "source": [
     "#this_tuple = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "this_tuple = (0.0,0.5,1.0,1.5,2.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -290,12 +290,12 @@
     "# Hint: the solution should be a number\n",
     "# green_index = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "green_index = -4\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -383,18 +383,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('green', 'blue', 'red')\n"
+     ]
+    }
+   ],
    "source": [
     "# Hint: use backwards slicing\n",
     "# rgb = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "rgb = color[-4::-1]\n",
+    "print(rgb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -452,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -508,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -525,15 +534,14 @@
     "# Uncomment the right answer\n",
     "#answer = \"a\"\n",
     "#answer = \"b\"\n",
-    "#answer = \"c\"\n",
+    "answer = \"c\"\n",
     "#answer = \"d\"\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -608,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -626,14 +634,13 @@
     "#answer = \"a\"\n",
     "#answer = \"b\"\n",
     "#answer = \"c\"\n",
-    "#answer = \"d\"\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "answer = \"d\"\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -690,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -706,14 +713,13 @@
    "source": [
     "# Uncomment the right answer\n",
     "#answer = \"yes\"\n",
-    "#answer = \"no\"\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "answer = \"no\"\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -770,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -809,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -821,18 +827,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 11, 22215, 7, 14, 1, 11, 9, 1, 6, 2, 5, 1, 24, 50, 45, 2, 45, 1, 1, 2, 1, 2, 1, 88, 9, 9, 9, 44, 5, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# Hint: Using operations between tuples.\n",
     "#this_tuple = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "this_tuple = left + right\n",
+    "print(this_tuple)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -928,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -946,12 +961,12 @@
     "#this_list = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "this_list =[1,'bananas',2,3,4]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1010,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1030,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1045,12 +1060,13 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "ice_cream.remove('chocolate')\n",
+    "ice_cream.append('dulce de leche')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1130,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1146,17 +1162,16 @@
    "source": [
     "# Uncomment the right answer\n",
     "#answer = \"a\"\n",
-    "#answer = \"b\"\n",
+    "answer = \"b\"\n",
     "#answer = \"c\"\n",
     "#answer = \"d\"\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1213,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1225,18 +1240,28 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'world']\n"
+     ]
+    }
+   ],
    "source": [
     "# Hint: multiply a list by a int \n",
     "#hello_world = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "hello_world = ['hello','world']\n",
+    "print(hello_world)\n",
+    "hello_world = hello_world * 5000\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1306,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1328,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1340,15 +1365,32 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lemon', 'stracciatella', 'cream', 'chocolate', 'vanilla']\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "ice_cream[-3]=  \"cream\"\n",
+    "print(ice_cream)\n",
+    "ice_cream.extend(others)\n",
+    "\n",
+    "ice_cream.sort()\n",
+    "\n",
+    "ice_cream = tuple(ice_cream)\n",
+    "type(ice_cream)\n",
+    "print(type(ice_cream))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1444,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1460,12 +1502,12 @@
    "source": [
     "#this_dict = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "this_dict = {'a':[1,2,3], 'b':[4,5,6],'c':[1,2,4], 'd':[4,5,4], 'e':[4,4]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1526,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1589,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1607,14 +1649,13 @@
     "#answer = \"a\"\n",
     "#answer = \"b\"\n",
     "#answer = \"c\"\n",
-    "#answer = \"d\"\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "answer = \"d\"\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1671,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1749,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1761,15 +1802,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bread': {'type': 'grains', 'price_per_unit': 3, 'quantity_purchased': 1}, 'onions': {'type': 'vegetables', 'price_per_unit': 0.5, 'quantity_purchased': 2}, 'spinages': {'type': 'vegetables', 'price_per_unit': 1.5, 'quantity_purchased': 1}}\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "groceries['bread']['price_per_unit']= 3\n",
+    "print(groceries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1828,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1840,15 +1890,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bread': {'type': 'grains', 'price_per_unit': 3, 'quantity_purchased': 1}, 'onions': {'type': 'vegetables', 'price_per_unit': 0.5, 'quantity_purchased': 2}, 'spinages': {'type': 'vegetables', 'price_per_unit': 1.5, 'quantity_purchased': 1}, 'rice': {'type': 'grains', 'price_per_unit': 1, 'quantity_purchased': 2}}\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "groceries.update({'rice':{'type':'grains', 'price_per_unit': 1, 'quantity_purchased':2}})\n",
+    "print(groceries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1906,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1918,15 +1977,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bread': {'type': 'grains', 'price_per_unit': 3, 'quantity_purchased': 1}, 'spinages': {'type': 'vegetables', 'price_per_unit': 1.5, 'quantity_purchased': 1}, 'rice': {'type': 'grains', 'price_per_unit': 1, 'quantity_purchased': 2}}\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "groceries.pop('onions')\n",
+    "print(groceries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1987,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2007,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2019,7 +2087,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['joao', 'bernardo', 'gabriel', 'antonio', 'maria', 'joel', 'ines', 'alberto', 'amilcar', 'emilia', 'ana', 'margarida'])\n",
+      "dict_values(['senior', 'adult', 'child', 'senior', 'senior', 'adult', 'adult', 'adult', 'senior', 'adult', 'adult', 'adult'])\n",
+      "<class 'list'>\n",
+      "['senior', 'adult', 'child', 'senior', 'senior', 'adult', 'adult', 'adult', 'senior', 'adult', 'adult', 'adult']\n",
+      "['adult', 'adult', 'adult', 'adult', 'adult', 'adult', 'adult', 'child', 'senior', 'senior', 'senior', 'senior']\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "#names = ...\n",
     "#ages = ...\n",
@@ -2027,12 +2108,26 @@
     "#n_seniors = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "names = seniority.keys()\n",
+    "ages = seniority.values()\n",
+    "print(names)\n",
+    "print(ages)\n",
+    "\n",
+    "list_ages = list(ages)\n",
+    "print(type(list_ages))\n",
+    "\n",
+    "print(list_ages)\n",
+    "\n",
+    "list_ages.sort()\n",
+    "print(list_ages)\n",
+    "\n",
+    "n_seniors = list_ages.count('senior')\n",
+    "print(n_seniors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2130,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2146,12 +2241,12 @@
    "source": [
     "#mary_collection = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "mary_collection = set()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2227,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2247,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2259,15 +2354,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Milo Goes To College', 'Loveless', 'Atom Heart Mother', 'Revolver', 'The Queen Is Dead', 'Repeater'}\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "mary_albums = set(mary_albums)\n",
+    "mary_collection = mary_collection.union(mary_albums)\n",
+    "\n",
+    "print(mary_collection)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2325,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2340,12 +2446,12 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "mary_collection.add('Antics')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2423,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2443,7 +2549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2459,12 +2565,12 @@
    "source": [
     "#same_albums = \n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "same_albums = mary_collection & fred_collection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2527,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2544,15 +2650,14 @@
     "# Uncomment the right answer\n",
     "#answer = \"a\"\n",
     "#answer = \"b\"\n",
-    "#answer = \"c\"\n",
+    "answer = \"c\"\n",
     "#answer = \"d\"\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2609,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2629,7 +2734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2646,12 +2751,13 @@
     "#total_size = ...\n",
     "#unique_size = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "total_size = len(lucky_numbers)\n",
+    "unique_size = len(set(lucky_numbers))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2694,7 +2800,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2708,7 +2814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
