Exercises for Week 05 - SLU08

--- a/Week 05/SLU08 - Functions Intermediate/Exercise notebook.ipynb
+++ b/Week 05/SLU08 - Functions Intermediate/Exercise notebook.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1ba83d66",
    "metadata": {
     "deletable": false,
@@ -78,7 +78,10 @@
    "id": "7f8a92a9",
    "metadata": {},
    "source": [
-    "YOUR ANSWER HERE"
+    "1. Scopes are where variables live\n",
+    "2. Namespaces is where the names of objects like functions live\n",
+    "3. Local scope is where variables live when they are defined inside a function.\n",
+    "4. global scope is where variables live, when they are created in the main body of the python code (outside functions). This means that local variables can be accessed only inside the function in which they are declared, whereas global variables can be accessed throughout the program body by all functions."
    ]
   },
   {
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5cb32a20",
    "metadata": {
     "deletable": false,
@@ -128,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "af08360b",
    "metadata": {
     "deletable": false,
@@ -148,12 +151,13 @@
     "# another_var_scope = \n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "a_var_scope = 'local'\n",
+    "another_var_scope = 'global'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "24ed0585",
    "metadata": {
     "deletable": false,
@@ -168,7 +172,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Very good, your answer is correct!\n"
+     ]
+    }
+   ],
    "source": [
     "assert hashlib.sha256(a_var_scope.encode()).hexdigest() == '25bf8e1a2393f1108d37029b3df5593236c755742ec93465bbafa9b290bddcf6', 'Incorrect answer for a_var_scope, try again!'\n",
     "assert hashlib.sha256(another_var_scope.encode()).hexdigest() == '8001c27439650c5c5a6b4ed94163b5ddeb4476362c71380e613fa20dfffcef50', 'Incorrect answer for another_var_scope, try again!'\n",
@@ -234,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "88c7953c",
    "metadata": {
     "deletable": false,
@@ -256,12 +268,15 @@
     "# print_4 = \n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print_1 = 10\n",
+    "print_2 = 10\n",
+    "print_3 = 10\n",
+    "print_4 = 200"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "df42f1f3",
    "metadata": {
     "deletable": false,
@@ -276,7 +291,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Very good, your answer is correct!\n"
+     ]
+    }
+   ],
    "source": [
     "assert hashlib.sha256(str(print_1).encode()).hexdigest() == '4a44dc15364204a80fe80e9039455cc1608281820fe2b24f1e5233ade6af1dd5', 'print_1 is not correct.'\n",
     "assert hashlib.sha256(str(print_2*2).encode()).hexdigest() == 'f5ca38f748a1d6eaf726b8a42fb575c3c71f1864a8143301782de13da2d9202b', 'print_2 is not correct.'\n",
@@ -339,7 +362,7 @@
    "id": "e814bb27",
    "metadata": {},
    "source": [
-    "YOUR ANSWER HERE"
+    "Because there are two outside_var (one local and one global), if i want to use the global one I can add global outside_var in the next line of def"
    ]
   },
   {
@@ -396,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "251313be",
    "metadata": {
     "deletable": false,
@@ -416,12 +439,13 @@
     "my_value_2 = []\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "my_value_1 = [1,2,3,5] \n",
+    "my_value_2 = [1,2,3,4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "86be09d7",
    "metadata": {
     "deletable": false,
@@ -436,7 +460,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Very good, your answer is correct!\n"
+     ]
+    }
+   ],
    "source": [
     "assert isinstance(my_value_1,list)\n",
     "assert hashlib.sha256(str(len(my_value_1)).encode()).hexdigest() == '4b227777d4dd1fc61c6f884f48641d02b4d121d3fd328cb08b5531fcacdabf8a', 'The length of the list my_value_1 is not correct.'\n",
@@ -481,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ee6ff04d",
    "metadata": {
     "deletable": false,
@@ -497,12 +529,17 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def use_global_scope(multiply_by: int, a_number):\n",
+    "    if isinstance(multiply_by,int):\n",
+    "        return multiply_by*a_number\n",
+    "    else:\n",
+    "        return None\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9ccb7487",
    "metadata": {
     "deletable": false,
@@ -517,7 +554,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Very good, your answer is correct!\n"
+     ]
+    }
+   ],
    "source": [
     "# check function source\n",
     "sig = inspect.signature(use_global_scope)\n",
@@ -571,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c5e11957",
    "metadata": {
     "deletable": false,
@@ -584,15 +629,28 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "a_number = 2\n",
+    "\n",
+    "use_global_scope(14,a_number = a_number)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "69394631",
    "metadata": {
     "deletable": false,
@@ -607,7 +665,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Very good, your answer is correct!\n"
+     ]
+    }
+   ],
    "source": [
     "# check the a_number variable\n",
     "'a_number' in globals().keys(), 'The variable a_number does not exist.'\n",
@@ -654,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6a29453d",
    "metadata": {
     "deletable": false,
@@ -667,15 +733,37 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "def multiply_list(my_list:list, multiply_by=2):\n",
+    "    a = [] \n",
+    "    for i in my_list:\n",
+    "        i *= multiply_by\n",
+    "        a.append(i)\n",
+    "    return a\n",
+    "\n",
+    "my_list = [1,2,3,4]\n",
+    "\n",
+    "\n",
+    "multiply_list(my_list.copy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6d1f5fb0",
    "metadata": {
     "deletable": false,
@@ -690,7 +778,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Very good, your answer is correct!\n"
+     ]
+    }
+   ],
    "source": [
     "# check function source\n",
     "sig = inspect.signature(multiply_list)\n",
