Exercises fro Week 5, SLU09

--- a/Week 05/SLU09 - OOP Basics/Learning Notebook Part 1 - What are objects.ipynb
+++ b/Week 05/SLU09 - OOP Basics/Learning Notebook Part 1 - What are objects.ipynb
@@ -80,9 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Dogs' from 'utils' (/Users/Carmen/projects/ds-prep-workspace/Week 05/SLU09 - OOP Basics/utils.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dogs\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Dogs' from 'utils' (/Users/Carmen/projects/ds-prep-workspace/Week 05/SLU09 - OOP Basics/utils.py)"
+     ]
+    }
+   ],
    "source": [
     "from utils import Fruit"
    ]
@@ -98,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +119,7 @@
        "utils.Fruit"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,12 +234,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'calculate_price'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# this is clearly a lot easier to read\u001b[39;00m\n\u001b[1;32m      2\u001b[0m my_fruits_list \u001b[38;5;241m=\u001b[39m [apples, bananas, oranges]\n\u001b[0;32m----> 4\u001b[0m \u001b[43mmy_fruits_list\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate_price\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'calculate_price'"
+     ]
+    }
+   ],
    "source": [
     "# this is clearly a lot easier to read\n",
-    "my_fruits_list = [apples, bananas, oranges]"
+    "my_fruits_list = [apples, bananas, oranges]\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -284,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +319,7 @@
        "10"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
