--- a/Week 06/SLU10 - OOP Inheritance/Learning notebook.ipynb
+++ b/Week 06/SLU10 - OOP Inheritance/Learning notebook.ipynb
@@ -320,7 +320,7 @@
     }
    ],
    "source": [
-    "jerry.first_name + ' ' + jerry.last_name"
+    "jerry.first_name + ' ' + jerry.last_name\n"
    ]
   },
   {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,6 +440,7 @@
     "class Teachbot(Robot):\n",
     "    \n",
     "    def grade_exam(self):\n",
+    "        #n = random.randint(1, 100)\n",
     "        if (n >= 50) & (n < 90):\n",
     "            print(\"Let's check your grade: %s%% | Congratulations, you passed!\" % n)\n",
     "        elif n >= 90:\n",
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +471,7 @@
       "\n",
       "I am a Educational Robot!\n",
       "How can I help you?\n",
-      "Let's check your grade: 97% | Top of the class!\n"
+      "Let's check your grade: 42% | Unfortunately, you'll have to take the exam again.\n"
      ]
     }
    ],
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,49 +548,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "my_agenda = Schedule()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What day is it?\n",
-      "day: 05/05/2023\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"What day is it?\")\n",
-    "my_agenda.check_day()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What time is it?\n",
-      "time: 18:51:27\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"What time is it?\")\n",
-    "my_agenda.check_time()"
    ]
   },
   {
@@ -601,8 +564,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 18:51:27\n",
-      "day: 05/05/2023\n",
+      "What day is it?\n",
+      "day: 05/15/2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"What day is it?\")\n",
+    "my_agenda.check_day()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What time is it?\n",
+      "time: 17:46:28\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"What time is it?\")\n",
+    "my_agenda.check_time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 17:46:31\n",
+      "day: 05/15/2023\n",
       "event: It is your study session!\n"
      ]
     }
@@ -631,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +673,8 @@
      "text": [
       "Lisbon\n",
       "Portugal\n",
-      "Europe\n"
+      "Europe\n",
+      "Portugal\n"
      ]
     }
    ],
@@ -680,7 +682,8 @@
     "our_land = Capital()\n",
     "\n",
     "our_land.metropolis()\n",
-    "our_land.main_land()"
+    "our_land.main_land()\n",
+    "\n"
    ]
   },
   {
@@ -1054,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,14 +1080,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-05-05|18:52:05 Hello World!\n"
+      "2023-05-15|18:01:58 Hello World!\n"
      ]
     }
    ],
@@ -1124,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1152,7 @@
      "text": [
       "Hello World!\n",
       "---------\n",
-      "2023-05-05|18:52:05 Hello World!\n"
+      "2023-05-15|18:07:14 Hello World!\n"
      ]
     }
    ],
@@ -1345,7 +1348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function is composed by two arguments, `isistance(object, class)`\n",
+    "This function is composed by two arguments, `isinstance(object, class)`\n",
     "<br>*the first argument is the object to be checked\n",
     "<br>the second argument is the target class*\n",
     "<br>and the function will checks if the **object** is an instance or subclass of the **class**.\n",
@@ -1676,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1688,7 @@
        "(__main__.Continent, object)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1719,7 @@
        "(__main__.Capital, __main__.Country, __main__.Continent, object)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
