Exercises fro Week 6, SLU 11

--- a/Week 06/SLU11 - String & File Handling/Learning notebook.ipynb
+++ b/Week 06/SLU11 - String & File Handling/Learning notebook.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "<_io.TextIOWrapper name='document.txt' mode='r' encoding='UTF-8'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,6 +864,51 @@
     "# concatenate strings with spaces (' ')\n",
     "sentence = lines[0].strip() + ' ' + lines[1].strip() + ' ' + lines[2].strip() \n",
     "sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'red 1'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a =1\n",
+    "b =2\n",
+    "c = \"red\"\n",
+    "d = \"blue\"\n",
+    "\n",
+    "expressiom = '%s %d'% (c,a)\n",
+    "expressiom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robey 454\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Robey'\n",
+    "number = 454\n",
+    "print ('%s %d' % (name, number) )"
    ]
   },
   {
@@ -1542,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,7 +2369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
