Exercises for Week 8 - SLU13 Linear algebra and numpy

--- a/Week 07/SLU12 - Linear Algebra & Numpy - Part 1/Exercise notebook.ipynb
+++ b/Week 07/SLU12 - Linear Algebra & Numpy - Part 1/Exercise notebook.ipynb
@@ -2226,6 +2226,17 @@
     "# ...\n",
     "# pieces = ...\n",
     "\n",
+    "\"\"\"\n",
+    "###  SOLUTIONS avoiding using any NumPy methods\n",
+    "side = int(panda.shape[0] / 10)\n",
+    "\n",
+    "# pieces list with 2 for loops\n",
+    "img_side = panda.shape[0]\n",
+    "for h_index in range(0, img_side, side):  # loop horizontally (h_index)\n",
+    "    for v_index in range(0, img_side, side):  # loop vertically (v_index)\n",
+    "        piece = panda[h_index:h_index+side, v_index:v_index+side]  # slice next piece of shape (46, 46)\n",
+    "        pieces.append(piece)  # save piece in pieces list\n",
+    "\"\"\"\n",
     "\n",
     "# YOUR CODE HERE\n",
     "\n",
