Exercises for Week 08 - SLU14 Modules & Packages

--- a/Week 08/SLU14 - Modules & Packages/Exercise notebook.ipynb
+++ b/Week 08/SLU14 - Modules & Packages/Exercise notebook.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -466,7 +466,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: To Kill a Mockingbird, Author: Harper Lee, Price: 2\n",
+      "35\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "book_list = [\n",
@@ -478,25 +487,53 @@
     "    ]\n",
     "    \n",
     "\n",
-    "# Set done = True\n",
+    "done = True\n",
     "\n",
     "# import your module\n",
+    "from stores import bookstore\n",
     "\n",
     "# use the book_list\n",
-    " \n",
+    "book1 = bookstore.Book(\"To Kill a Mockingbird\", \"Harper Lee\", 2)\n",
+    "print(book1.get_book_info())\n",
+    "\n",
+    "    \n",
+    "    \n",
     "# Calculate the total price of the books using the get_total_price function\n",
     "\n",
-    "# total_price =\n",
+    "total_price = bookstore.get_total_price(book_list)\n",
     "\n",
     "# Print the total price\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(total_price)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: To Kill a Mockingbird, Author: Harper Lee, Price: 2\n",
+      "Title: The Great Gatsby, Author: F. Scott Fitzgerald, Price: 5\n",
+      "Title: Pride and Prejudice, Author: Jane Austen, Price: 7\n",
+      "Title: The Catcher in the Rye, Author: J.D. Salinger, Price: 6\n",
+      "Title: 1984, Author: George Orwell, Price: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "for book_info in book_list:\n",
+    "    title, author, price = book_info\n",
+    "    book = bookstore.Book(title, author, price)\n",
+    "    print(book.get_book_info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -510,7 +547,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Great job! You are awesome :-).\n"
+     ]
+    }
+   ],
    "source": [
     "if done:\n",
     "    try:\n",
@@ -539,13 +584,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\"> **Exercise 6: We love a good python course, right?! Import the class Course, from module course, and create a new object from that**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -568,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -586,12 +624,13 @@
     "#this_course = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "from library.shelf.course import  Course\n",
+    "this_course = Course(name=\"prep-course\", author=\"ldssa\", year=2023)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -789,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -812,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -875,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -900,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -960,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -984,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
