--- a/Week 08/SLU13 - Linear Algebra & NumPy, Part 2/Ejercicios-Copy1.ipynb
+++ b/Week 08/SLU13 - Linear Algebra & NumPy, Part 2/Ejercicios-Copy1.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -216,9 +216,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2 -5]\n",
+      " [-1  1 -2]\n",
+      " [ 1 -1 -3]]\n",
+      "True\n",
+      "cf2d85ea1d\n",
+      "13deaba4a9\n",
+      "9d89fe38ba\n",
+      "b9e762f987\n",
+      "8064be0e5f\n"
+     ]
+    }
+   ],
    "source": [
     "# expected answer\n",
     "column_2 = np.array([[2], [1], [-1]])\n",
@@ -239,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -262,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -318,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -330,7 +346,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'row' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [58]\u001b[0m, in \u001b[0;36m<cell line: 21>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m mat1 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m], [\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m85\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m48\u001b[39m], [\u001b[38;5;241m92\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m46\u001b[39m], [\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m42\u001b[39m, \u001b[38;5;241m63\u001b[39m], [\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m42\u001b[39m, \u001b[38;5;241m63\u001b[39m], [\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m35\u001b[39m, \u001b[38;5;241m75\u001b[39m]])\n\u001b[1;32m     19\u001b[0m mat2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m4\u001b[39m], [\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m42\u001b[39m, \u001b[38;5;241m98\u001b[39m, \u001b[38;5;241m19\u001b[39m]])\n\u001b[0;32m---> 21\u001b[0m \u001b[43mmultiply_matrices\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmat1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmat2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m mat1\u001b[38;5;241m.\u001b[39mshape\n\u001b[1;32m     23\u001b[0m rows, cols \u001b[38;5;241m=\u001b[39m mat1\u001b[38;5;241m.\u001b[39mshape\n",
+      "Input \u001b[0;32mIn [58]\u001b[0m, in \u001b[0;36mmultiply_matrices\u001b[0;34m(matrix_1, matrix_2)\u001b[0m\n\u001b[1;32m     11\u001b[0m rows_m2, cols_m2 \u001b[38;5;241m=\u001b[39m matrix_2\u001b[38;5;241m.\u001b[39mshape\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m,rows_m1):\n\u001b[0;32m---> 14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrow\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrow\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcol\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcol\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'row' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# create function called multiply_matrices\n",
     "\n",
@@ -338,7 +367,24 @@
     "# ...\n",
     "# ...\n",
     "\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "def multiply_matrices(matrix_1, matrix_2):\n",
+    "    #i = 1\n",
+    "    rows_m1, cols_m1 = matrix_1.shape\n",
+    "    rows_m2, cols_m2 = matrix_2.shape\n",
+    "    \n",
+    "    for i in range(1,rows_m1):\n",
+    "\n",
+    "\n",
+    "mat1 = np.array([[1, 2], [-1, 0], [85, -48], [92, -46], [-42, 63], [-42, 63], [-35, 75]])\n",
+    "mat2 = np.array([[3, -10, 5, 4], [10, -42, 98, 19]])\n",
+    "\n",
+    "multiply_matrices(mat1,mat2)\n",
+    "mat1.shape\n",
+    "rows, cols = mat1.shape\n",
+    "\n",
+    "print(rows)\n",
+    "print(cols)"
    ]
   },
   {
